--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,7 @@
-Отличная раскладка!!
-Лучшая в совем роде!!!
-Юуууухххааа!!!
+<div class='jumbotron'>
+<h1> Туристическая раскладка продуктов</h1>
+<h2> Расчет продуктов в поход</h2>
+<h3> Точная калькуляция, точное распределение веса между туристами</h3>
+<p> Эта программа подсчитывает продукты в поход, поровну распределяет вес, подситывает расходы. Есть готовые шаблоны, буквально за 5 минут можно получить на руки полный список необходимого снаряжения и продуктов. Останется только купить и не забыть взять в поход!</p>
+	
+</div>
