--- a/templates/showtrip.html
+++ b/templates/showtrip.html
@@ -1,4 +1,4 @@
-<span>Название похода:</span> {{showTripCtrl.tripName}}
+ <span>Название похода:</span> {{showTripCtrl.tripName}}
 <br>
 <span>Дата похода:</span> {{showTripCtrl.stringDate}}
 <br>
@@ -7,8 +7,8 @@
 <span>Сейчас:</span> {{showTripCtrl.nowDate}}
 <br>
 <span><b>{{showTripCtrl.timeLeft}}</b></span>
-<br>
-<span ng-if='showTripCtrl.timeOut'><a ui-sref="createNew" ng-click='showTripCtrl.refreshTotal()'>Исправьте время и дату выезда!</a></span>
+
+<span ng-if='showTripCtrl.timeOut'><br><a ui-sref="createNew" ng-click='showTripCtrl.refreshTotal()'>Исправьте время и дату выезда!</a></span>
 <br>
 <span>Участники:{{showTripCtrl.tripMembers}}</span>
 <br>
