--- a/templates/loadready.html
+++ b/templates/loadready.html
@@ -20,6 +20,6 @@
         <button 
           ng-disabled="loadForm.$invalid"
           ng-click="loadCtrl.checkDB()"
-          ui-sref= "setProducts({fromDB: 1})">Загрузить!
+          ui-sref= "createNew({fromDB: 1})">Загрузить!
         </button>
 </form>
