--- a/templates/menuselect.html
+++ b/templates/menuselect.html
@@ -1,6 +1,7 @@
 <div style='float: left'>
-<show-trip ></show-trip>
+
 <div ng-if='menuCtrl.formError()'></div>
+<div ng-if = 'menuCtrl.newProduct()'></div>
 </div>
 
 <br>
