--- a/templates/showready.html
+++ b/templates/showready.html
@@ -2,10 +2,9 @@
 <show-trip ></show-trip>
 <a ui-sref="setProducts">Вернуться назад</a>
 </div> -->
-<show-trip></show-trip>
-<a ui-sref="setProducts" ng-click='showCtrl.rememberExpenses()'>Вернуться назад</a>
+<!-- <a ui-sref="setProducts" ng-click='showCtrl.rememberExpenses()'>Вернуться назад</a>
 <br>
-<button type="button" class="btn btn-primary" ng-show='showCtrl.admin' ng-click='showCtrl.saveReady()'>СОХРАНИТЬ РАСКЛАДКУ!</button>
+<button type="button" class="btn btn-primary" ng-show='showCtrl.admin' ng-click='showCtrl.saveReady()'>СОХРАНИТЬ РАСКЛАДКУ!</button> -->
 
 <span><b>Общие расходы группы: {{showCtrl.totalExpenses.toFixed(2)}}</b></span>
 <br>
