--- a/templates/showdaysmenu.html
+++ b/templates/showdaysmenu.html
@@ -1,4 +1,4 @@
-<table cellpadding='10' cellspacing='10' border="1px" width='100%'>
+<table class='table table-condensed' style='width: 100%; table-layout: fixed;'>
 	<thead>
 		<tr>
 			<th ng-repeat='day in days'>{{day}}</th>
@@ -16,5 +16,3 @@
 		</tr>
 	</tbody>
 </table>
-
-<!-- <button type="button" class="btn btn-primary" ng-click='showDaysMenuCtrl.arrangeMenu()'>Распределить по дням!</button> -->
