--- a/templates/startcreating.html
+++ b/templates/startcreating.html
@@ -59,7 +59,7 @@
 		</span>
 		<br>
 
-		<label for="tripPassword">Придумай пароль:</label>
+		<label for="tripPassword">Пароль:</label>
 		<input type="text" class="form-control" name="tripPassword"  ng-model = 'startCtrl.firstInfo.tripPassword' ng-maxlength="40"/>	
 		<span ng-if="regForm.tripPassword.$error.maxlength">
             Это слишком уж длинный пароль, надо бы покороче!
